# drone-swarm-simulation

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  flake.nix
src/: main.cpp  systemv_ipc.cpp  systemv_ipc.h  thread.cpp  thread.h
src/child/: child.cpp
src/common/: clock.h  logger.cpp  logger.h  process.cpp  process.h  systemv_ipc.cpp  systemv_ipc.h  thread.cpp  thread.h  thread_utils.cpp  thread_utils.h
src/common/ipc/: ipc.cpp  ipc.h  msg_queue.cpp  msg_queue.h  pipe.cpp  pipe.h  semaphore_set.h  shared_memory.h
src/drone/: drone.cpp
src/logger/: logger.cpp
src/main/: main.cpp
